# cli-tools

./: pyproject.toml
manifests/media/L221-video-to-gif/: README.md  SKILL.md  requirements.txt  video-to-gif.py
manifests/media/L222-video-compress/: README.md  SKILL.md  video-compress.py
manifests/media/L223-video-trim/: README.md  SKILL.md  video-trim.py
manifests/media/L224-auto-subtitle/: README.md  SKILL.md  auto-subtitle.py  requirements.txt
manifests/media/L225-sub-translate/: README.md  SKILL.md  sub-translate.py
manifests/media/L226-img-shrink/: README.md  SKILL.md  img-shrink.py
manifests/media/L227-bg-remove/: README.md  SKILL.md  bg-remove.py  requirements.txt
manifests/media/L228-shot-annotate/: README.md  SKILL.md  requirements.txt  shot-annotate.py
manifests/media/L229-shot-blur/: README.md  SKILL.md  shot-blur.py
manifests/media/L230-img-transcode/: README.md  SKILL.md  img-transcode.py
manifests/media/L231-thumb-make/: README.md  SKILL.md  thumb-make.py
manifests/media/L232-video-recode/: README.md  SKILL.md  video-recode.py
manifests/media/L233-audio-denoise/: README.md  SKILL.md  audio-denoise.py  requirements.txt
manifests/media/L234-audio-stt/: README.md  SKILL.md  audio-stt.py  requirements.txt
manifests/media/L235-text-tts/: README.md  SKILL.md  requirements.txt  text-tts.py
manifests/media/L236-live-clip/: README.md  SKILL.md  live-clip.py
manifests/media/L237-video-summary/: README.md  SKILL.md  requirements.txt  video-summary.py
router/: __init__.py  cache.py  cli.py  downloader.py  execute.py  runner.py
(+77 files in other folders)
