[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clibrary-router"
version = "0.1.0"
description = "CLI tool router for AI agents — finds, downloads, and runs the right CLI from natural language"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "requests>=2.31",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
clibrary = "router.cli:main"

[tool.setuptools.packages.find]
include = ["router*"]
